--- a/md4/Assignment - 1/quizstyling.css
+++ b/md4/Assignment - 1/quizstyling.css
@@ -45,12 +45,12 @@ fieldset {
     margin-bottom: -20px;
 }
 
-.container {
+/*.container {
     margin-top: 25%;
     margin-bottom: 25%;
     margin-left: 15%;
     margin-right: 15%;
-}
+}*/
 
 #content{
     margin-top: 10px;
