--- a/Week 4 Project/src/app/login/login.component.css
+++ b/Week 4 Project/src/app/login/login.component.css
@@ -9,7 +9,7 @@
     color: white;
 }
 
-#button {
+#login {
     background-color: chocolate;
     border: none;
     color: white;
@@ -25,7 +25,7 @@
     margin-left: 35%;
   }
   
-#button:hover {opacity: 1}
+#login:hover {opacity: 1}
 
 #registerlink {
     margin-left: 33%;
