--- a/Week 4 Project/src/app/login/login.component.html
+++ b/Week 4 Project/src/app/login/login.component.html
@@ -6,20 +6,20 @@
 			<div class="card">
 				<div class="card-header" id="header">Login</div>
 				<div class="card-body">
-				<form>
-					<div class="form-group">
-						<label for="email"><i class="fas fa-user"></i> &nbsp;Email address/ Phone Number:</label>
-						<input type="email" class="form-control" id="email">
-					</div>
-					<div class="form-group">
-						<label for="pwd">Password:</label>
-						<input type="password" class="form-control" id="pwd">
-					</div>
-					<button type="button" class="btn btn-primary" id = "button">Login</button>
-					<br>
-					<div class="row">
-						<a href="#" id = "registerlink">Not an user? Register</a>
-					</div>
+					<form [formGroup] = "login">
+						<div class="form-group">
+							<label for="email"><i class="fas fa-user"></i> &nbsp;Email address/ Phone Number:</label>
+							<input type="email" class="form-control" id="email" formControlName = "username">
+						</div>
+						<div class="form-group">
+							<label for="pwd">Password:</label>
+							<input type="password" class="form-control" id="pwd">
+						</div>
+						<button type="button" class="btn btn-primary" id = "login">Login</button>
+						<br>
+						<div class="row">
+							<a href="#" id = "registerlink">Not an user? Register</a>
+						</div>
 					</form>
 				</div> 
 			</div>
