--- a/Week 4 Project/src/app/signup/signup.component.html
+++ b/Week 4 Project/src/app/signup/signup.component.html
@@ -7,24 +7,48 @@
             <div class="card">
                 <div class="card-header" id="header">Sign Up</div>
                 <div class="card-body">
-                  <form>
-                      <div class="form-group">
-                        <label for="email"><i class="fas fa-envelope"></i> &nbsp;Email address:</label>
-                        <input type="email" class="form-control" id="email">
-                      </div>
-                      <div class="form-group">
-                        <label for="ph_no"><i class="fas fa-phone"></i>&nbsp;Phone Number:</label>
-                        <input type="text" class="form-control" id="ph_no">
-                      </div>
-                      <div class="form-group">
-                        <label for="pwd">Password:</label>
-                        <input type="password" class="form-control" id="pwd">
-                      </div>
-                      <div class="form-group">
-                        <label for = "address"><i class="far fa-address-card"></i>&nbsp;Address:</label>
-                        <textarea class="form-control" rows="5" id="comment"></textarea>
-                      </div>
-                      <button type="button" class="btn btn-primary" id = "button">Register</button>
+                    <form [formGroup]="registerForm">
+                        <div class="form-group">
+                            <label>First Name</label>
+                            <input type="text" formControlName="firstName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors}" />
+                            <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
+                                <div *ngIf="f.firstName.errors.required">First Name is required</div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label>Last Name</label>
+                            <input type="text" formControlName="lastName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
+                            <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
+                                <div *ngIf="f.lastName.errors.required">Last Name is required</div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label><i class="fas fa-phone"></i>&nbsp;Phone Number:</label>
+                            <input type="text" formControlName="phnum" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.phnum.errors }" />
+                            <div *ngIf="submitted && f.phnum.errors" class="invalid-feedback">
+                                <div *ngIf="f.phnum.errors.required">Phone number is required</div>
+                                <div *ngIf="f.phnum.errors.minlength">Phone number must be valid</div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label><i class="fas fa-envelope"></i> &nbsp;Email</label>
+                            <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+                            <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                                <div *ngIf="f.email.errors.required">Email is required</div>
+                                <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label>Password</label>
+                            <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                            <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                                <div *ngIf="f.password.errors.required">Password is required</div>
+                                <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                          <button type="button" class="btn btn-primary" id = "register" (click)="onSubmit()">Register</button>
+                        </div>
                     </form>
                 </div> 
               </div>
