--- a/Week 4 Project/src/app/login/login.component.html
+++ b/Week 4 Project/src/app/login/login.component.html
@@ -9,13 +9,23 @@
 					<form [formGroup] = "login">
 						<div class="form-group">
 							<label for="email"><i class="fas fa-user"></i> &nbsp;Email address/ Phone Number:</label>
-							<input type="email" class="form-control" id="email" formControlName = "username">
+							<input type="email" class="form-control" id="email" formControlName="username" [ngClass]="{ 'is-invalid': submitted && f.username.errors}">
+							<div *ngIf = "submitted && f.username.errors" class = "invalid-feedback">
+								<div *ngIf = "f.username.errors.required">
+									Enter username
+								</div>
+							</div>
 						</div>
 						<div class="form-group">
 							<label for="pwd">Password:</label>
-							<input type="password" class="form-control" id="pwd">
+							<input type="password" class="form-control" id="pwd" formControlName="password" [ngClass]="{ 'is-invalid': submitted && f.password.errors}">
+							<div *ngIf = "submitted && f.password.errors" class = "invalid-feedback">
+								<div *ngIf = "f.password.errors.required">
+									enter password
+								</div>
+							</div>
 						</div>
-						<button type="button" class="btn btn-primary" id = "login">Login</button>
+						<button type="button" class="btn btn-primary" id = "login" (click) = "onSubmit()">Login</button>
 						<br>
 						<div class="row">
 							<a href="#" id = "registerlink">Not an user? Register</a>
